[package]
name = "pass_finder"
version = "0.1.0"
edition = "2021"
description = "Find radio passes of satellites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.18", features=["blocking"] }
serde = { version = "1.0.172", features = ["derive"] }
serde_json = "1.0.103"
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
time-format = "1.1.2"
rayon = "1.7.0"

[package.metadata.bundle]
name = "pass_finder"
identifier = "com.emm312.passfinder"
